Fixed button word wrap

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -62,6 +62,7 @@ input {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently*/
     transition: background-color 0.425s ease-out;
+    word-wrap: break-word;
 }
 
 .button:active {
@@ -107,6 +108,7 @@ input {
     padding-right: 3vw;
     color: white;
     border-bottom-left-radius: 15px;
+    word-wrap: break-word;
     
 }
 
